<resources>
    <string name="app_name">CvApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Objectives</string>
    <string name="menu_slideshow">Projects</string>
    <string name="flavio_sampson">Flavio Sampson</string>
    <string name="fsampson30_gmail_com">fsampson30@gmail.com</string>
    <string name="profile">Profile</string>
    <string name="objectives">Objectives</string>
    <string name="profile_first_text_en">Hello, my name is Flavio Sampson, and I\'ve created this App to talk a little about myself.</string>
    <string name="profile_second_text_en">I have over 15 years working in IT, doing a few different functions along this way.</string>
    <string name="profile_third_text_en">My primary function is to support System users and develop SQL queries and reports.</string>
    <string name="profile_fourth_text_en">During my free time I study and develop Android Apps having published 2 in Google Play Store</string>
    <string name="profile_first_text_pt">Olá, meu nome é Flavio Sampson, e criei este App para falar um pouco sobre mim.</string>
    <string name="profile_second_text_pt">Tenho mais de 15 anos trabalhando com TI, realizando diferentes funções ao longo desse período.</string>
    <string name="profile_third_text_pt">Minha principal função atualmente é prestar suporte a usuários de Sistema e desenvolver consultas e relatórios em SQL.</string>
    <string name="profile_fourth_text_pt">Durante meu tempo livre, estudo e desenvolvo aplicativos Android sendo que 2 estão publicados na Google Play Store.</string>
    <string name="gitHub">https://github.com/fsampson30</string>
    <string name="linkedin">https://www.linkedin.com/in/flavio-sampson-a83339185/</string>
    <string name="hello_blank_fragment">Blank Fragment</string>
    <string name="cervamania">https://play.google.com/store/apps/details?id=br.com.cervamania.cervamania</string>
    <string name="missile">https://play.google.com/store/apps/details?id=com.m.missilegetaway</string>
    <string name="sql">SQL</string>
    <string name="java">Java</string>
    <string name="kotlin">Kotlin</string>
    <string name="firebase">Firebase</string>
    <string name="material_design">Material Design</string>
    <string name="retrofit">Retrofit</string>
    <string name="postgresql">PostgreSQL</string>
    <string name="mysql">MySQL</string>
    <string name="git">Git</string>
    <string name="jetpack_compose">JetPack Compose</string>
    <string name="label">Label:</string>
    <string name="label_pt">Legenda:</string>
    <string name="txt_title_skills_en">In this life we are always learning, all skills can be improved, even 5 stars.</string>
    <string name="txt_title_skills_pt">Na vida estamos sempre aprendendo, todas as habilidades podem ser melhoradas, até as de 5 estrelas.</string>
    <string name="hardskills_label_5_stars_en">Especialist. There always room for more!</string>
    <string name="hardskills_label_4_stars_en">Advanced knowledge. Easy to use.</string>
    <string name="hardskills_label_3_stars_en">Intermediary knowledge. No problem to use.</string>
    <string name="hardskills_label_2_stars_en">Basic knowledge. Used a few times</string>
    <string name="hardskills_label_1_stars_en">Knowledge on the concept. Next to study</string>
    <string name="hardskills_label_5_stars_pt">Especialista. Sempre tem algo novo!</string>
    <string name="hardskills_label_4_stars_pt">Conhecimento avançado. Fácil de usar.</string>
    <string name="hardskills_label_3_stars_pt">Conhecimento intermediário. Sem problema no uso.</string>
    <string name="hardskills_label_2_stars_pt">Conhecimento básico. Usado algumas vezes</string>
    <string name="hardskills_label_1_stars_pt">Conhecimento de conceito. Próximo a ser estudado</string>
    <string name="patience">Patience</string>
    <string name="objectivity">Objectivity</string>
    <string name="perseverance">Perseverance</string>
    <string name="communication">Communication</string>
    <string name="creativity">Creativity</string>
    <string name="honesty">Honesty</string>
    <string name="group_work">Group Work</string>
    <string name="will_to_learn">Will to Learn</string>
    <string name="leadership">Leadership</string>
    <string name="paciencia">Paciência</string>
    <string name="objevidade">Objetividade</string>
    <string name="perseveranca">Perseverança</string>
    <string name="comunicacao">Comunicação</string>
    <string name="criatividade">Criatividade</string>
    <string name="honestidade">Honestidade</string>
    <string name="trabalho_em_grupo">Trabalho em Grupo</string>
    <string name="vontade_de_aprender">Vontade de Aprender</string>
    <string name="lideranca">Liderança</string>
    <string name="SoftSkills_label_1_stars_en">Much to improve</string>
    <string name="SoftSkills_label_2_stars_en">Getting better</string>
    <string name="SoftSkills_label_3_stars_en">Good level</string>
    <string name="SoftSkills_label_4_stars_en">Excelent level</string>
    <string name="SoftSkills_label_5_stars_en">Dominant feature</string>
    <string name="SoftSkills_label_1_stars_pt">Muito a melhorar</string>
    <string name="SoftSkills_label_2_stars_pt">Melhorando</string>
    <string name="SoftSkills_label_3_stars_pt">Bom nível</string>
    <string name="SoftSkills_label_4_stars_pt">Excelente nível</string>
    <string name="SoftSkills_label_5_stars_pt">Característica dominante</string>
    <string name="infnet_pt">Curso de Desenvolvedor Java - Infnet</string>
    <string name="caelum_pt">Curso de Desenvolvimento móvel com Google Android - Caelum</string>
    <string name="udemy_pt">Curso Completo de Android Material Design - Udemy</string>
    <string name="clc_pt">Curso de Inglês (4 Anos) - CLC Idiomas - Completo - Fluente em Inglês</string>
    <string name="infnet_en">Java Developer Course - Infnet</string>
    <string name="caelum_en">Mobile Development with Google Android Course - Caelum</string>
    <string name="udemy_en">Android Material Design Complete Course - Udemy</string>
    <string name="clc_en">English Course (4 years) - CLC Idiomas - Completed - English fluency</string>
    <string name="infnet_site">https://www.infnet.edu.br/infnet/</string>
    <string name="caelum_site">https://www.caelum.com.br/</string>
    <string name="udemy_site">https://www.udemy.com/</string>
    <string name="home">Home</string>
    <string name="text_objective_1_en">I\'m looking for a career change, after many years working supporting and training System users, I want to change to Sofware Development.</string>
    <string name="text_objectives_2_en">More skilled in the Android Mobile Development, using Java, in this moment I\'m studying Kotlin and Retrofit to consume API\'s. In this study plan the next steps are Firebase and Jetpack Compose</string>
    <string name="text_objectives_3_en">Open to new technologies, and don\'t have any problem to study new ones.</string>
    <string name="text_objectives_4_en">I live in Rio de Janeiro but I\'m willing to work in other cities in person or Home Office.</string>
    <string name="text_objective_1_pt">Estou buscando uma mudança de carreira, após muitos anos trabalhando com suporte a usuários de Sistema, quero mudar para o Desenvolvimento de Software</string>
    <string name="text_objectives_2_pt">Mais especializado no Desenvolvimento Mobile Android, usando Java, nesse momento estou estudando Kotlin com Retrofit para consumo de API\'s. Os próximos passos desse plano de estudo serão Firebase e Jetpack Compose</string>
    <string name="text_objectives_3_pt">Aberto a novas tecnologias e não tenho nenhum problema em estudar coisas novas.</string>
    <string name="text_objectives_4_pt">Moro no Rio de Janeiro mas estou disposto a trabalhar presencialmente em outras cidades ou Home Office.</string>
    <string name="menu_objectives">Objectives</string>
    <string name="menu_courses">Courses</string>
    <string name="menu_hard_skills">Hard Skills</string>
    <string name="menu_soft_skills">Soft Skills</string>
    <string name="txt_cervamania">Cervamania</string>
    <string name="txt_cervamaniaweb">CervamaniaWeb</string>
    <string name="clinicaapp">ClinicaApp</string>
    <string name="clinicaappservlets">ClinicaAppServlets</string>
    <string name="clinicaappdesktop">ClinicaAppDesktop</string>
    <string name="missilegetaway">MissileGetAway</string>
    <string name="estudokotlinapi">EstudoKotlinApi</string>
    <string name="cvapp">CvApp</string>
    <string name="description_repository1_en">App that lists the most diverse types of Beer around the World. You can know all the beers that you like, share with others, rate and post your opinion about it. Knowledge in the palm of your hand. Access to a external database via Servlet/Json MySQL database Sends pictures of your favorite beer in case you don’t find it.</string>
    <string name="description_repository2_en">Backend of the project. Servlets to access MySQL Database and creation of the photo files send by the user.</string>
    <string name="description_repository3_en">App developed for the Clinic’s patients schedule consults and exams and receive the results os the exams. It was intended to facilitate the communication between patient and Clinic. Access to a external database via Servlet/Json MySQL database. Sends pictures of the medical request. Download of PDF. Desktop module develop in Java/Swing to control and respond the app demands.</string>
    <string name="description_repository4_en">Backend of the Project. Servlets to access MySQL Database and creation of the photo files send by the patient.</string>
    <string name="description_repository5_en">Desktop program created to control the information sent and received by patient and clinic. Access directly the MySQL Database.</string>
    <string name="description_repository6_en">Game developed using the Framework Cocos2d. A fun ship game designed to shoot your enemies.</string>
    <string name="description_repository7_en">App is being delevoped with a friend (link bellow) to study purposes. The App will consume a API simulating an employee registration. Uses Koltin and Retrofit.</string>
    <string name="description_repository8_en">App created to show a little bit about myself. : )</string>
    <string name="description_repository9_en">Repositoty created to Study Kotlin using JetBrains Plataform.</string>
    <string name="description_repository1_pt">App que lista os mais diversos tipos de cerveja do Mundo. Você pode aprender tudo sobre as cervejas que gosta, compartilhar com os amigos, classificar e postar sua opinião sobre ela. Conhecimento na palma de sua mão. Acesso a um banco de dados MySQL via Servlet/Json. Envie fotos de suas cervejas favoritas caso não ache a sua.</string>
    <string name="description_repository2_pt">Backend do projeto. Servlets de acesso ao Banco de Dados MySQL e criação dos arquivos de fotos enviados pelos usuários.</string>
    <string name="description_repository3_pt">App desenvolvido para os pacientes de uma clínica consultarem seus exames e receberem os seus resultados. Foi feito como forma de facilicar a comunicação entre paciente e clínica. Acesso a um Banco de Dados via Servlet/Json. Envia fotos dos pedidos médicos dos pacientes. Download de PDF. Feito módulo para Desktop em Java/Swing  para controle e respostas das demandas do App.</string>
</resources>