<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.sampson.cvapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.sampson.cvapp.ui.gallery.ObjectivesFragment"
        android:label="@string/menu_objectives"
        tools:layout="@layout/fragment_objectives" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.sampson.cvapp.ui.slideshow.ProjectsFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_projects" />

    <fragment
        android:id="@+id/nav_courses"
        android:name="com.sampson.cvapp.CoursesFragment"
        android:label="@string/menu_courses"
        tools:layout="@layout/fragment_courses" />

    <fragment
        android:id="@+id/nav_hard_skills"
        android:name="com.sampson.cvapp.HardSkillsFragment"
        android:label="@string/menu_hard_skills"
        tools:layout="@layout/fragment_hard_skills" />

    <fragment
        android:id="@+id/nav_soft_skills"
        android:name="com.sampson.cvapp.SoftSkillsFragment"
        android:label="@string/menu_soft_skills"
        tools:layout="@layout/fragment_soft_skills" />

</navigation>